--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,15 @@
         <relativePath/>
     </parent>
 
-    <artifactId>lib-baas-adapter</artifactId>
+    <artifactId>lib-baas-treezor-impl</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+
+    <properties>
+        <java.version>21</java.version>
+        <treezor.jdk.path>C:\Users\CarlosAlbertoSánchez\Desktop\TREEZOR\lib-sdk-treezor\target\treezor-sdk-25.04.03.jar</treezor.jdk.path>
+    </properties>
+
 
     <dependencies>
         <dependency>
