--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,26 +1,15 @@
-name: Publish Pipeline
+name: Publish to GitHub Packages
 
 on:
   push:
     branches: ["main", "develop"]
+  pull_request:
 
 jobs:
-  build-jar:
-    uses: catalis-vc/cicd/.github/workflows/build-maven.yaml@main
+  build-and-publish:
+    uses: firefly-oss/cicd/.github/workflows/build-maven.yaml@main
     with:
       java-version: "21"
       skip-tests: false
-      jar-path: "lib-baas-adapter/target/lib-baas-adapter.jar"
     secrets:
       PAT_GITHUB_PACKAGE: ${{ secrets.PAT_GITHUB_PACKAGE }}
-  docker-publish:
-    needs: [build-jar]
-    uses: catalis-vc/cicd/.github/workflows/docker-publish.yaml@main
-    with:
-      dockerfile-path: "./Dockerfile"
-      azure-registry-name: "catalis.azurecr.io"
-      azure-registry-repository: "lib-baas-adapter"
-      docker-image-tag: "latest"
-    secrets:
-      AZURE_ACR_USERNAME: ${{ secrets.AZURE_ACR_USERNAME }}
-      AZURE_ACR_PASSWORD: ${{ secrets.AZURE_ACR_PASSWORD }}
