--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,6 @@
         <core-banking-accounts-interfaces.version>1.0.0-SNAPSHOT</core-banking-accounts-interfaces.version>
         <core-banking-cards-interfaces.version>1.0.0-SNAPSHOT</core-banking-cards-interfaces.version>
         <core-banking-payments-interfaces.version>1.0.0-SNAPSHOT</core-banking-payments-interfaces.version>
-        <bfc-customers.version>1.0.0-SNAPSHOT</bfc-customers.version>
 
     </properties>
 
@@ -46,11 +45,13 @@
             <version>${core-banking-payments-interfaces.version}</version>
         </dependency>
 
+        <!-- Utils -->
         <dependency>
-            <groupId>com.catalis</groupId>
-            <artifactId>bfc-customers-interfaces</artifactId>
-            <version>${bfc-customers.version}</version>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
         </dependency>
+
 
     </dependencies>
 
