refactor: Migrate package structure from com.catalis to com.firefly
This commit represents a comprehensive refactoring to migrate the project from
the legacy com.catalis package structure to the new com.firefly structure.

🔄 Migration Details:
- Maven groupId: com.catalis → com.firefly
- Package structure: com/catalis → com/firefly
- Java imports and package declarations updated
- Spring Boot configuration metadata fixed
- Resource files and properties updated
- Maven dependencies aligned with new structure

🛡️ Safety Measures:
- Original code preserved in 'catalis-non-refactored-main' branch
- Automated backup directories added to .gitignore
- Full compilation and testing verified

🏢 Context:
This migration is part of the firefly-oss organization restructuring
to align with the new brand identity and organizational structure.
The refactoring was performed using automated tools with comprehensive
testing and validation.

Type: single-module
Tools: firefly-oss/maven-refactor-tools
Validated: ✅ Compilation successful

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.catalis</groupId>
+        <groupId>com.firefly</groupId>
         <artifactId>lib-parent-pom</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath/>
@@ -28,19 +28,19 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.catalis</groupId>
+            <groupId>com.firefly</groupId>
             <artifactId>core-banking-accounts-interfaces</artifactId>
             <version>${core-banking-accounts-interfaces.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>com.catalis</groupId>
+            <groupId>com.firefly</groupId>
             <artifactId>core-banking-cards-interfaces</artifactId>
             <version>${core-banking-cards-interfaces.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>com.catalis</groupId>
+            <groupId>com.firefly</groupId>
             <artifactId>core-banking-payments-interfaces</artifactId>
             <version>${core-banking-payments-interfaces.version}</version>
         </dependency>
