--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,10 @@
 
 # Log file
 *.log
-
 # BlueJ files
 *.ctxt
-
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
-
 # Package Files #
 *.jar
 *.war
@@ -18,27 +15,24 @@
 *.zip
 *.tar.gz
 *.rar
-
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
-
 # IntelliJ IDEA specific files
 .idea/
 *.iml
 *.iws
-
 # Target directory (Maven/Gradle)
 target/
-
 # Temporary files created by IntelliJ IDEA
 out/
-
 # IntelliJ generated assets like workspace.xml or tasks.xml
 workspace.xml
 tasks.xml
-
 # Other IntelliJ settings to ignore
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/shelf/
+# Refactoring backup directories
+.refactor-backup-*/
+*.refactor-backup-*
