fix: Clean up remaining catalis references and update configurations
🔧 Changes Applied:
- Fixed remaining com.catalis → com.firefly references
- Updated team configuration (Catalis → Firefly Software Solutions Inc)
- Updated team email (dev@catalis.com → dev@getfirefly.io)
- Enhanced server configuration with environment variables
  - SERVER_ADDRESS (default: localhost)
  - SERVER_PORT (default: 8080)

🛡️ Safety Measures:
- Smart build verification passed
- All changes tested for compilation

🏢 Context:
Part of the comprehensive firefly-oss refactoring to ensure
complete migration from catalis branding and improve
environment-based configuration flexibility.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,11 +4,12 @@ spring:
     version: 1.0.0
     description: BAAS Adapter
     team:
-      name: Catalis Development
-      email: dev@catalis.com
+      name: Firefly Software Solutions Inc
+      email: dev@getfirefly.io
 
 server:
-  port: 8080
+  address: ${SERVER_ADDRESS:localhost}
+  port: ${SERVER_PORT:8080}
   shutdown: graceful
 
 logging:
